[gd_scene load_steps=10 format=3 uid="uid://c38ljfl5kd2dp"]

[ext_resource type="Script" uid="uid://b4w4ijxgq63wn" path="res://scripts/dialogue_box.gd" id="1_p0wdv"]
[ext_resource type="Texture2D" uid="uid://bkmq2qhtiwmrq" path="res://assets/others/dialogue box.png" id="2_pehjr"]
[ext_resource type="Texture2D" uid="uid://cbx2bvtaga2y3" path="res://assets/npc sprites/Old man.png" id="2_yhmkw"]
[ext_resource type="FontFile" uid="uid://bubkqg1s5webm" path="res://assets/fonts/Aladin-Regular.ttf" id="3_c26ww"]
[ext_resource type="Script" uid="uid://pg0cs3iab3rs" path="res://scripts/timers/timer (2).gd" id="4_yhmkw"]
[ext_resource type="AudioStream" uid="uid://dqtq48iavgn5b" path="res://assets/sound/1 - Completion/Male/Sean Lenhart/completion_1_sean.wav" id="5_rfeir"]
[ext_resource type="AudioStream" uid="uid://b5dddjyyrjok6" path="res://assets/sound/Grandpa voice.wav" id="6_pehjr"]
[ext_resource type="AudioStream" uid="uid://bjxh2bg5xfobh" path="res://assets/sound/retro-blip-2-236668.wav" id="7_c26ww"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_0nste"]
texture = ExtResource("2_pehjr")
region_rect = Rect2(0, 217, 640, 145)

[node name="Node2D" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_p0wdv")

[node name="character1" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -180.0
offset_right = 640.0
offset_bottom = 180.0
grow_vertical = 2
size_flags_horizontal = 0
texture = ExtResource("2_yhmkw")
expand_mode = 3

[node name="character2" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -180.0
offset_bottom = 180.0
grow_horizontal = 0
grow_vertical = 2
size_flags_horizontal = 8
texture = ExtResource("2_yhmkw")
expand_mode = 3

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 100
theme_override_constants/margin_right = 100

[node name="Panel" type="Panel" parent="."]
custom_minimum_size = Vector2(0, 145)
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxTexture_0nste")

[node name="label_container" type="MarginContainer" parent="Panel"]
layout_mode = 1
offset_right = 87.0
offset_bottom = 23.0
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 16

[node name="Label" type="Label" parent="Panel/label_container"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("3_c26ww")
theme_override_font_sizes/font_size = 20

[node name="text_container" type="MarginContainer" parent="Panel"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -30.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 18
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="RichTextLabel" type="RichTextLabel" parent="Panel/text_container"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_fonts/normal_font = ExtResource("3_c26ww")
theme_override_font_sizes/normal_font_size = 14
bbcode_enabled = true

[node name="Timer" type="Timer" parent="."]
wait_time = 0.01
script = ExtResource("4_yhmkw")

[node name="AudioStreamPlayer1" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_rfeir")
volume_db = -16.0
max_polyphony = 4

[node name="AudioStreamPlayer3" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_pehjr")
volume_db = 24.0

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_c26ww")
volume_db = -19.285
max_polyphony = 2

[connection signal="timeout" from="Timer" to="Timer" method="_on_timeout"]
